Set theme jekyll-theme-minimal

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jiajia Wu 
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
 show_downloads: true
 google_analytics: UA-134998524-1
 github_url: https://github.com/bs3113
