--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,13 @@
-title: John Doe # your name (or website title) here
+title: Jiajia Wu
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  PHD Candiate 
   <br><br>
-  Second description 
+  Biomedical Engineering
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  Northwestern University
+  <br><br>
+  <a href="https://www.linkedin.com/in/jiajia-wu-3a0715174/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
