--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,13 @@ title: Jiajia Wu
 logo: "/images/logo.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   PHD Candiate 
-  <br><br>
   Biomedical Engineering
   Northwestern University
   <br><br>
+  MSU
+  Bachelor in Electrical Engineering, Biomedical Concentration
+  Honors College Member
+  Minor in Cognitive Science
   <a href="https://www.linkedin.com/in/jiajia-wu-3a0715174/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
