--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Jiajia Wu
-logo: "/images/logo.jpg?raw=true" # your photo (or logo) here
-description: > # your text below (remove <br> elements if you don't need line breaks)
-  PHD Candiate 
-  Biomedical Engineering
+logo: "/images/logo.jpg?raw=true"
+description: >
   Northwestern University
+  PHD Candiate
+  Biomedical Engineering
   <br><br>
   MSU
   Bachelor in Electrical Engineering, Biomedical Concentration
