--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,15 @@
 title: Jiajia Wu
 logo: "/images/logo.jpg?raw=true"
 description: >
-  Northwestern University
-  PHD Candiate
-  Biomedical Engineering
+  Northwestern University <br>
+  PHD Candiate <br>
+  Biomedical Engineering <br>
   <br><br>
   MSU
-  Bachelor in Electrical Engineering, Biomedical Concentration
-  Honors College Member
-  Minor in Cognitive Science
+  Bachelor in Electrical Engineering, Biomedical Concentration <br>
+  Honors College Member <br>
+  Minor in Cognitive Science <br>
+
   <a href="https://www.linkedin.com/in/jiajia-wu-3a0715174/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
